    manifesting as nonsensical errors like "STRING is a bad type specifier 
    for sequences" or "The value 1 is not of type FIXNUM")
  * bug fix: version components are handled correctly in TRANSLATE-PATHNAME
    (reported by Josip Gracin)
  * bug fix: an error is signaled for attempts to displace arrays with
    incompatible element types (thanks to Mario Mommer)
  * optimization: method calls with &OPTIONAL or &KEY arguments are faster
    and don't cause extra consing
  * optimization: MAP and MAP-INTO are significantly faster on vectors
    whose elements types have been declared.
  * Improvements to SB-SPROF:
    ** Support for allocation profiling
    ** Reduced profiling overhead, especially for long profiling runs
  * Improvements to the Windows port:
    ** floating point exceptions are now reported correctly.
    ** stack exhaustion detection works partially.
    ** more accurate GET-INTERNAL-REAL-TIME.
    ** better RUN-PROGRAM behaviour in case of errors in the child
       process.
    ** PROBE-FILE now simplifies pathnames correctly.
    ** DIRECTORY now works correctly with :WILD-INFERIORS.
    ** DECODE-UNIVERSAL-TIME works on times before 00:00:00 January
       1st 1970 (although time timezone data will be unreliable).
    ** Hyperbolic functions TANH, ASINH, ACOSH, and ATANH work.

changes in sbcl-0.9.18 (1.0.beta?) relative to sbcl-0.9.17:
  * enhancement: SB-POSIX now supports cfsetispeed(3), cfsetospeed(3),
    cfgetispeed(3), cfgetospeed(3), and related constants. (thanks to
    Max-Gerd Retzlaff)
  * bug fix: two potential GC deadlocks affecting threaded builds.
  * bug fix: (TYPEP #\A '(NOT (MEMBER #\" #\{ #\:))) now correctly
    returns T (reported by Anton Kazennikov)
  * bug fix: the STORE-VALUE restart of CHECK-TYPE works correctly
    with non-variable places
  * bug fix: remove a race condition in the setting of
    funcallable-instance functions, this should make threaded CLOS
    code more stable against memory faults.